fix: add letter spacing

--- a/src/assets/scss/_typography.scss
+++ b/src/assets/scss/_typography.scss
@@ -3,6 +3,7 @@ body {
   line-height: 1.5;
   font-family: $font-family-serif;
   font-size: $font-size-normal;
+  letter-spacing: 0.15px;
 }
 
 h1,
